<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="@string/conversation__menu_add_attachment"
        android:id="@+id/menu_add_attachment"
        android:icon="@drawable/ic_attach_file_black_18dp"/>

    <item android:title="@string/conversation__menu_view_all_media"
        android:id="@+id/menu_view_media"
        android:icon="@drawable/ic_perm_media_black_18dp"/>

    <item
        android:id="@+id/menu_conversation_settings"
        android:title="@string/conversation__menu_conversation_settings"
        android:icon="@drawable/ic_settings_black_18dp"/>

    <item
        android:id="@+id/menu_pinned_messages"
        android:title="@string/conversation__menu_pinned_messages"
        android:icon="@drawable/ic_pin_black_24dp"
        />

</menu>

